--- a/client/src/components/ProductsList/ProductListData.css
+++ b/client/src/components/ProductsList/ProductListData.css
@@ -4,6 +4,12 @@
     }
 
 }
+@media(min-width:824px){
+    .inside-label{
+        display: none;
+    }
+
+}
 .range-input{
     width: 13rem;
     display: flex;
