--- a/client/src/components/Navbars/AdminNavbar.css
+++ b/client/src/components/Navbars/AdminNavbar.css
@@ -4,11 +4,13 @@
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(63, 63, 68, 0.1);
 }
 .navbar-brand{
+    z-index: 1 !important;
     display: flex;
     align-items: center;
 }
 .fontIcon-wrapper{
     padding: 10px;
+    /* z-index: 1; */
     /* border: 1px solid black; */
     background: #fff;
     border-radius: .29rem;
@@ -19,6 +21,7 @@
     align-items: center;
 }
 .NavIcon-brand{
+    /* z-index: 1; */
     color: #757575;
  }
 .NavIcon-brand:hover{
