--- a/client/src/components/ProductsList/ProductListData.css
+++ b/client/src/components/ProductsList/ProductListData.css
@@ -118,7 +118,7 @@
         display: flex;
         justify-content: space-between;
         /* margin: 10px; */
-        padding: 20px !important;
+        /* padding: 20px !important; */
     
     }
 }
