--- a/client/src/assets/css/demo.css
+++ b/client/src/assets/css/demo.css
@@ -2,6 +2,17 @@
 html,body{
   overflow-x: hidden;
 }
+/* @media screen and (max-width:1382px){
+  .order-list{
+    display: none;
+  }
+} */
+img{
+  transition: transform .2s;
+}
+img:hover{
+  transform: scale(1.1);
+}
 .ct-series-a .ct-slice-pie,.ct-series-a .ct-slice-pie, .ct-series-a .ct-area {
 fill: #87CB16 !important;
 stroke: white !important;
