--- a/client/src/components/AnimatedCard/AnimatedCard.css
+++ b/client/src/components/AnimatedCard/AnimatedCard.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border-radius: 10%;
+    border-radius: 5px;
     /* align-items: center; */
 }
 .card1{
